# Quantitative-Trading-Strategy-Backtester

./: .gitignore  LICENSE  README.md  WEB_INTERFACE_README.md  backend.py  index.html  pyproject.toml  requirements-web.txt  script.js  start_beautiful_website.py  start_web_interface.py  start_website.py  styles.css
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  index-new.html  index-old.html  index.html  script.js  styles-simple.css  styles.css  test.html
notebooks/: quickstart.ipynb
qbacktester/: CHANGELOG.md  Dockerfile  pyproject.toml
qbacktester/data/: AAPL_1d_2020-01-01_2021-01-01.parquet  AAPL_1d_2021-01-01_2022-01-01.parquet  AAPL_1d_2022-01-01_2023-01-01.parquet  AAPL_1d_2023-01-01_2023-01-31.parquet  AAPL_1d_2023-01-01_2023-03-31.parquet  DEMO_1d_2023-01-01_2023-01-20.parquet  SPY_1d_2023-01-01_2023-12-31.parquet
qbacktester/notebooks/: README.md
qbacktester/reports/: opt_grid_aapl.csv  walkforward_equity_aapl.csv  walkforward_summary_aapl.csv  walkforward_windows_aapl.csv
qbacktester/src/qbacktester/: __main__.py  backtester.py  cli.py  optimize.py  run.py  strategy.py
qbacktester/src/qbacktester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qbacktester/tests/: __init__.py  test_cli.py  test_indicators.py  test_optimize.py  test_walkforward.py
scripts/: profile_vectorization.py
src/qbacktester/: __init__.py  __main__.py  backtester.py  cli.py  core.py  data.py  indicators.py  metrics.py  optimize.py  plotting.py  portfolio.py  run.py  strategy.py  walkforward.py
tests/: test_backtester.py  test_cli.py  test_core.py  test_data.py  test_indicators.py  test_metrics.py  test_optimize.py  test_plotting.py  test_run.py  test_strategy.py  test_walkforward.py
